# circleci-test

./: circleci-test.cabal  stack.yaml
.circleci/: config.yml
app/: Main.hs
