name:                circleci-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/circleci-test#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , interpolatedstring-perl6
                     , text-conversions
                     , process
                     , blaze-html
                     , aeson
                     , lens-aeson
                     , cassava
                     , resource-pool
                     , vault
                     , uuid
                     , aeson-casing
                     , timeit
                     , random
                     , exceptions
                     , stringbuilder
                     , attoparsec
                     , servant
                     , servant-server
                     , servant-blaze
                     , bytestring
                     , wai
  default-language:   Haskell2010

executable circleci-test-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , circleci-test
  default-language:    Haskell2010

test-suite circleci-test-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , circleci-test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/circleci-test
